model_composer_work/gemv/log.txt
./model_composer_work/gemv/wrap_gemv.h
/tools/Xilinx/Vitis/2024.1/aietools/tps/lnx64/gcc/bin/g++ -I/tools/Xilinx/Vitis_HLS/2024.1/include -I/tools/Xilinx/Vitis/2024.1/aietools/include -E -std=c++17 ./model_composer_work/gemv/wrap_gemv.h -o ./model_composer_work/gemv/tu.ii
arg3 -std=c++17
./model_composer_work/gemv/wrap_gemv.h:2: warning: "restrict" redefined
 #define restrict __restrict
 
In file included from /tools/Xilinx/Vitis/2024.1/aietools/include/adf.h:16,
                 from ./model_composer_work/gemv/wrap_gemv.h:1:
/tools/Xilinx/Vitis/2024.1/aietools/include/adf/new_frontend/adf.h:20: note: this is the location of the previous definition
 #define restrict
 
In file included from ./model_composer_work/gemv/wrap_gemv.h:3:
./model_composer_work/gemv/../../gemv.h:6:58: error: expected ';' at end of declaration
               adf::output_buffer<int16>& __restrict out)
                                                         ^
                                                         ;
1 error generated.
Error while processing /home/a.gnaneswaran/aie_mc/mm/model_composer_work/gemv/tu.ii.
